--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: github-pages  # 👈 Ensures access to environment secrets
+    environment: github-pages
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -48,9 +48,11 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    environment: github-pages  # 👈 Ensures access to environment secrets
+    environment: github-pages
     needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
