--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "framer-motion": "^12.4.7",
     "iconify": "^1.4.0",
     "next": "15.1.5",
     "react": "^19.0.0",
